# wrd

./: .env.backup  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.claude-ide  MANIFEST.in  Makefile  README.md  README.pl.md  TODO.md  claude-code-README.md  docker-README.md  docker-compose.claude-code.yml  docker-compose.yml  fedora.sh  install_claude.sh  install_claude_code.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_containers.sh
cli/: README.md  claude-code.sh
config/code-server/: config.yaml
docs/: 01-wprowadzenie.md  02-instalacja.md  03-konfiguracja.md  04-uzycie-vscode.md  05-cli.md  06-modele-claude.md  07-rozwoj.md  08-rozwiazywanie-problemow.md  conf.py  index.md  requirements.txt
docs/how-to-guides/: claude-code-setup.md  configuration.md  custom-templates.md
docs/tutorials/: quickstart.md
scripts/: cli-wrapper.sh  entrypoint.sh
src/wrd/: __init__.py  __main__.py  __main__.py.backup  __version__.py  cli.py  template_manager.py
src/wrd/templates/: __init__.py
src/wrd/templates/python/: README.md.j2  gitignore.j2  project.yml  pyproject.toml.j2
tests/: __init__.py  conftest.py  test_basic.py  test_functional.py
tests/integration/: test_cli_integration.py
tests/unit/: test_cli.py  test_template_manager.py
workspace/: test_environment.py  verify_environment.sh
wrd/: __main__.py
