[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wrd"
version = "1.0.3"
description = "WRD (Word) - Narzędzie workflow dla Claude Code na Fedorze"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tom Sapletta", email = "info@softreck.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
    "pydantic>=1.9.0",
    "python-dotenv>=0.19.0",
    "requests>=2.28.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.0.0"
]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.0.0"
]
data = [
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "matplotlib>=3.6.0"
]
web = [
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0"
]

[project.scripts]
wrd = "wrd.__main__:main"

[project.urls]
homepage = "https://github.com/wronai/wrd"
repository = "https://github.com/wronai/wrd"
documentation = "https://github.com/wronai/wrd#readme"
"Bug Tracker" = "https://github.com/wronai/wrd/issues"

[tool.setuptools]
package-dir = { "" = "." }
packages = ["wrd"]
package-data = { wrd = ["templates/*", "configs/*"] }

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
