[metadata]
name = wrd
version = attr: wrd.__version__
description = WRD (WRonai Development) - A powerful workflow automation tool for developers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wronai/wrd
author = WRonai Team
author_email = contact@wronai.com
maintainer = WRonai Team
maintainer_email = contact@wronai.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir = 
    =src
packages = find:
python_requires = >=3.8
install_requires =
    typer[all]>=0.12.3,<1.0.0
    rich>=13.7.0,<14.0.0
    pyyaml>=6.0.1,<7.0.0
    jinja2>=3.1.2,<4.0.0
    python-dotenv>=1.0.0,<2.0.0
    click>=8.1.7,<9.0.0
    pydantic>=2.5.2,<3.0.0
    shellingham>=1.5.0,<2.0.0

[options.packages.find]
where = src
include = wrd*

[options.package_data]
wrd = py.typed, templates/**/*, templates/**/.*

[options.extras_require]
dev =
    pytest>=7.4.0,<8.0.0
    pytest-cov>=4.1.0,<5.0.0
    black>=23.7.0,<24.0.0
    isort>=5.12.0,<6.0.0
    flake8>=6.1.0,<7.0.0
    mypy>=1.5.1,<2.0.0
    sphinx>=7.0.0,<8.0.0
    sphinx-rtd-theme>=1.2.0,<2.0.0
    twine>=4.0.0,<5.0.0
    build>=0.10.0,<1.0.0
data =
    pandas>=1.5.0,<2.0.0
    numpy>=1.24.0,<2.0.0
    matplotlib>=3.6.0,<4.0.0

[options.entry_points]
console_scripts =
    wrd = wrd.cli:app

[egg_info]
tag_build = 
tag_date = 0

[bdist_wheel]
universal = 1
